syntax = "proto3";

package aliothcontroller;

option java_package = "com.futurewei.alioth.controller.service";

import "common.proto";
import "goalstate.proto";

service GoalStateProvisioner {

   // A simple RPC
   //
   // Push a group of network resource states
   // Input: a GoalState object consists of a list of operation requests, and each request contains an operation type and a resource configuration 
   //
   // Results consist of a list of operation statuses, and each status is a response to one operation request in the input
   rpc PushNetworkResourceStates(GoalState) returns (GoalStateOperationReply) {}

}

message GoalStateOperationReply {

   repeated GoalStateOperationStatus operation_statuses = 1;    

   message GoalStateOperationStatus {
	string resource_id = 1;
        ResourceType resource_type = 2;
        OperationType operation_type = 3;
        OperationStatus operation_status = 4; 
   }
}
